# LesionSizingToolkit

./: .gitattributes  CMakeLists.txt  CTestConfig.cmake  ITKKWStyleOverwrite.txt  LICENSE  README.rst  itk-module.cmake  pyproject.toml  setup.py  svnadd.sh  svnpropset.sh
.circleci/: config.yml
Documents/Reports/: CMakeLists.txt
Examples/: CMakeLists.txt  LesionSegmentation.cxx  LesionSegmentationCLI.h  dirent_win.h  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.hxx  itkLesionSegmentationCommandLineProgressReporter.cxx  itkLesionSegmentationCommandLineProgressReporter.h
Sandbox/: CMakeLists.txt
Sandbox/Source/: CMakeLists.txt  itkBinaryThresholdFeatureGenerator.h  itkBinaryThresholdFeatureGenerator.txx  itkCannyEdgeDetectionRecursiveGaussianImageFilter.h  itkCannyEdgeDetectionRecursiveGaussianImageFilter.txx  itkCannyEdgeDetectionRecursiveGaussianImageFilter2.h  itkCannyEdgeDetectionRecursiveGaussianImageFilter2.txx  itkCannyEdgesDistanceAdvectionFieldFeatureGenerator.h  itkCannyEdgesDistanceAdvectionFieldFeatureGenerator.txx  itkCannyEdgesDistanceFeatureGenerator.h  itkCannyEdgesDistanceFeatureGenerator.txx  itkCannyEdgesFeatureGenerator.h  itkCannyEdgesFeatureGenerator.txx  itkConfidenceConnectedSegmentationModule.h  itkConfidenceConnectedSegmentationModule.txx  itkConnectedThresholdSegmentationModule.h  itkConnectedThresholdSegmentationModule.txx  itkDescoteauxSheetnessFeatureGenerator.h  itkDescoteauxSheetnessFeatureGenerator.txx  itkDescoteauxSheetnessImageFilter.h  itkFastMarchingAndGeodesicActiveContourLevelSetSegmentationModule.txx  itkFastMarchingAndShapeDetectionLevelSetSegmentationModule.h  itkFastMarchingAndShapeDetectionLevelSetSegmentationModule.txx  itkFastMarchingSegmentationModule.h  itkFastMarchingSegmentationModule.txx  itkFeatureAggregator.h  itkFeatureAggregator.txx  itkFeatureGenerator.h  itkFeatureGenerator.txx  itkFrangiTubularnessFeatureGenerator.h  itkFrangiTubularnessFeatureGenerator.txx  itkFrangiTubularnessImageFilter.h  itkGeodesicActiveContourLevelSetSegmentationModule.h  itkGeodesicActiveContourLevelSetSegmentationModule.txx  itkGradientMagnitudeSigmoidFeatureGenerator.h  itkGradientMagnitudeSigmoidFeatureGenerator.txx  itkGrayscaleImageSegmentationVolumeEstimator.h  itkGrayscaleImageSegmentationVolumeEstimator.txx  itkIsotropicResampler.h  itkIsotropicResampler.txx  (+66 more)
Testing/: CMakeLists.txt  CannyEdgeDetectionImageFilter1.cxx  CannyEdgeDetectionImageFilter2.cxx  CannyEdgeDetectionImageFilter3.cxx  CollectionTestMacro.cmake  DicomSeriesReadImageWrite.cxx  GradientMagnitudeImageFilter.cxx  LandmarkSpatialObjectWriterTest.cxx  ResampleVolumeToBeIsotropic.cxx  VOLCANOCollectionTests.cmake  itkCannyEdgesDistanceAdvectionFieldFeatureGeneratorTest1.cxx  itkConfidenceConnectedSegmentationModuleTest1.cxx  itkConnectedThresholdSegmentationModuleTest1.cxx  itkDescoteauxSheetnessFeatureGeneratorMultiScaleTest1.cxx  itkDescoteauxSheetnessFeatureGeneratorTest1.cxx  itkDescoteauxSheetnessImageFilterTest2.cxx  itkFeatureGeneratorTest1.cxx  itkGeodesicActiveContourLevelSetSegmentationModuleTest1.cxx  itkGradientMagnitudeSigmoidFeatureGeneratorTest1.cxx  itkGrayscaleImageSegmentationVolumeEstimatorTest1.cxx  itkHessian3DTest1.cxx  itkLandmarksReaderTest1.cxx  itkLesionSegmentationMethodTest1.cxx  itkLesionSegmentationMethodTest2.cxx  itkLesionSegmentationMethodTest4.cxx  itkLesionSegmentationMethodTest5.cxx  itkLesionSegmentationMethodTest7.cxx  itkLocalStructureImageFilterTest1.cxx  itkMatrixLinearInterpolateImageFunctionTest1.cxx  itkMaximumFeatureAggregatorTest1.cxx  itkMaximumFeatureAggregatorTest2.cxx  itkMinimumFeatureAggregatorTest1.cxx  itkMinimumFeatureAggregatorTest2.cxx  itkMorphologicalOpenningFeatureGeneratorTest1.cxx  itkNumericTraitsMatrixPixelTest1.cxx  itkRegionGrowingSegmentationModuleTest1.cxx  itkSatoLocalStructureFeatureGeneratorTest1.cxx  itkSatoVesselnessFeatureGeneratorMultiScaleTest1.cxx  itkSatoVesselnessFeatureGeneratorTest1.cxx  itkSatoVesselnessSigmoidFeatureGeneratorTest1.cxx  (+15 more)
Toolkit/: CMakeLists.txt  CTestConfig.cmake
src/: CMakeLists.txt  itkCannyEdgeDetectionImageFilter1.cxx  itkCannyEdgeDetectionImageFilter2.cxx  itkDicomSeriesReadImageWrite.cxx  itkGradientMagnitudeImageFilter.cxx  itkGradientMagnitudeRecursiveGaussianImageFilter.cxx  itkImageReadRegionOfInterestAroundSeedWrite.cxx  itkImageReadRegionOfInterestWrite.cxx  itkImageReadWrite.cxx  itkIncludeRequiredIOFactories.h  itkLaplacianRecursiveGaussianImageFilter.cxx  itkResampleVolumeToBeIsotropic.cxx
test/: CMakeLists.txt  CannyEdgeDetectionImageFilter2.cxx  CannyEdgeDetectionImageFilter3.cxx  CollectionTestMacro.cmake  CornellCollectionTests.cmake  FDAPhantomCollectionTests.cmake  ImageReadRegionOfInterestWrite.cxx  ImageReadWrite.cxx  LandmarkSpatialObjectWriterTest.cxx  NISTPhantomCollectionTests.cmake  ParseArgumentsMacro.cmake  VOLCANOCollectionTestMacro.cmake  azure-pipelines.yml  itkBinaryThresholdFeatureGeneratorTest1.cxx  itkCannyEdgesDistanceAdvectionFieldFeatureGeneratorTest1.cxx  itkCannyEdgesDistanceFeatureGeneratorTest1.cxx  itkCannyEdgesFeatureGeneratorTest1.cxx  itkConfidenceConnectedSegmentationModuleTest1.cxx  itkConnectedThresholdSegmentationModuleTest1.cxx  itkDescoteauxSheetnessFeatureGeneratorMultiScaleTest1.cxx  itkDescoteauxSheetnessFeatureGeneratorTest1.cxx  itkDescoteauxSheetnessImageFilterTest1.cxx  itkDescoteauxSheetnessImageFilterTest2.cxx  itkFastMarchingSegmentationModuleTest1.cxx  itkFeatureAggregatorTest1.cxx  itkFeatureGeneratorTest1.cxx  itkFrangiTubularnessFeatureGeneratorTest1.cxx  itkGeodesicActiveContourLevelSetSegmentationModuleTest1.cxx  itkGradientMagnitudeSigmoidFeatureGeneratorTest1.cxx  itkGrayscaleImageSegmentationVolumeEstimatorTest1.cxx  itkGrayscaleImageSegmentationVolumeEstimatorTest2.cxx  itkIsotropicResamplerTest1.cxx  itkLandmarksReaderTest1.cxx  itkLesionSegmentationMethodTest1.cxx  itkLesionSegmentationMethodTest10.cxx  itkLesionSegmentationMethodTest2.cxx  itkLesionSegmentationMethodTest3.cxx  itkLesionSegmentationMethodTest4.cxx  itkLesionSegmentationMethodTest5.cxx  itkLesionSegmentationMethodTest6.cxx  (+27 more)
(+743 files in other folders)
