CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(LesionSizingKitSandbox)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

SET(EXECUTABLE_OUTPUT_PATH ${LesionSizingKitSandbox_BINARY_DIR}/bin CACHE INTERNAL "Where to put the executables") 
SET(LIBRARY_OUTPUT_PATH ${LesionSizingKitSandbox_BINARY_DIR}/bin CACHE INTERNAL "Where to put the libraries") 


OPTION(ITK_USE_MULTI_PHASE_FRAMEWORK "Enable multi-phase level sets" ON)

ENABLE_TESTING()
INCLUDE(CTest)

INCLUDE_DIRECTORIES(
  ${LesionSizingKitSandbox_SOURCE_DIR}/Source
  )

ADD_SUBDIRECTORY(Source)
ADD_SUBDIRECTORY(Testing)
ADD_SUBDIRECTORY(Examples)

INCLUDE(${LesionSizingKitSandbox_SOURCE_DIR}/Utilities/KWStyle/KWStyle.cmake)
